--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   }
 }
