--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ondyn/pushCam#readme",
   "dependencies": {
+    "axios": "^1.3.2",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
