--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ondyn/pushCam#readme",
   "dependencies": {
     "axios": "^1.3.2",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
